--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProjetBourse.jar
+dist.jar=${dist.dir}/DevoirBourse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ProjetBourse
+dist.jlink.output=${dist.jlink.dir}/DevoirBourse
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ProjetBourse
+jlink.launcher.name=DevoirBourse
 main.class=projetbourse.FrmPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
